full_errors.txt
    Checking pieuvre-sync v0.2.1 (C:\Users\CleS\Desktop\pieuvre\crates\pieuvre-sync)
error[E0425]: cannot find function `configure_msi_for_devices` in module `crate::msi`
   --> crates\pieuvre-sync\src\operation.rs:122:25
    |
122 |             crate::msi::configure_msi_for_devices(&devices, &priority)?;
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::msi`

warning: unused import: `std::path::Path`
  --> crates\pieuvre-sync\src\lib.rs:39:5
   |
39 | use std::path::Path;
   |     ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `pieuvre-sync` (lib) generated 1 warning
error: could not compile `pieuvre-sync` (lib) due to 1 previous error; 1 warning emitted
